Rebranded from Zclassic to Bitcoin Private
Links and genesis block building which used Zclassic remain unchanged.

--- a/doc/man/zcash-cli.1
+++ b/doc/man/zcash-cli.1
@@ -5,7 +5,7 @@ zcash-cli \- manual page for zcash-cli v1.0.10-1
 .SH DESCRIPTION
 Zcash RPC client version v1.0.10\-1
 .PP
-In order to ensure you are adequately protecting your privacy when using Zclassic,
+In order to ensure you are adequately protecting your privacy when using Bitcoin Private,
 please see <https://z.cash/support/security/index.html>.
 .SS "Usage:"
 .TP
